# StreamCrosser-engine

./: CMakeLists.txt  README.md  main.cpp
Parser/: IdManager.cpp  IdManager.hpp  Makefile  Scanner.hpp  grammar.y  lexer.l
ProcessingNodes/: Constant.hpp  Cube.hpp  Engine.hpp  EngineExceptions.hpp  Expression.hpp  ExpressionCompiler.hpp  Filter.hpp  IInputNode.hpp  IProcessingNode.hpp  Join.hpp  Output.hpp  Prop.hpp  Set.hpp  SourceStream.hpp  SourceTable.hpp  StreamOutput.hpp  Window.hpp
includes/: httplib.h
